group 'com.centaurstech'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    maven{ url"http://maven.aliyun.com/nexus/content/groups/public" }
    mavenCentral()
    maven { url "https://jitpack.io" }
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'cglib', name: 'cglib', version: '3.2.10'

    compile group: 'org.json', name: 'json', version: '20160212'
    compile 'com.squareup.okhttp3:okhttp:3.8.1'
    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.0'
}
